feat (user): Add full API along with document and filtering
